@@ -6,7 +6,6 @@ using Terraria;
 using Terraria.DataStructures;
 using Terraria.ID;
 using Terraria.ModLoader;
-using Terraria.ModLoader.Config;
 
 namespace InfectedQualities.Core
 {
@@ -280,16 +279,6 @@ namespace InfectedQualities.Core
                     }
                     return (string)biomeManager.GetProperty("WorldEvilName").GetValue(null) != "";
                 }
-            }
-            return false;
-        }
-
-        public static bool HallowNightMusic()
-        {
-            if(SpiritMod != null)
-            {
-                Type musicConfig = SpiritMod.Code.GetType("SpiritMod.Utilities.SpiritMusicConfig");
-                return (bool)musicConfig.GetProperty("HallowNightMusic").GetValue(ModContent.Find<ModConfig>(SpiritMod.Name, "SpiritMusicConfig"));
             }
             return false;
         }
