@@ -2,6 +2,7 @@
 =======
 -Fixed packets causing a horrifying fps drop. (46 MILLION PACKETS, I really messed up)
 -Touched up the pylon of night sprite, now looking less cluttered.
+-Removed SpiritMod compability with the 'hallow music in jungle' config.
 
 0.7.4.1
 =======
